uploaded files to s3

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -16,27 +16,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keyring is skipped due to an exception: 'keyring.backends'\n",
+      "Collecting smdebug\n",
+      "  Using cached smdebug-1.0.12-py2.py3-none-any.whl (270 kB)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /opt/conda/lib/python3.7/site-packages (from smdebug) (1.21.6)\n",
+      "Requirement already satisfied: boto3>=1.10.32 in /opt/conda/lib/python3.7/site-packages (from smdebug) (1.26.24)\n",
+      "Collecting pyinstrument==3.4.2\n",
+      "  Using cached pyinstrument-3.4.2-py2.py3-none-any.whl (83 kB)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.7/site-packages (from smdebug) (20.1)\n",
+      "Requirement already satisfied: protobuf>=3.6.0 in /opt/conda/lib/python3.7/site-packages (from smdebug) (3.20.3)\n",
+      "Collecting pyinstrument-cext>=0.2.2\n",
+      "  Using cached pyinstrument_cext-0.2.4-cp37-cp37m-manylinux2010_x86_64.whl (20 kB)\n",
+      "Requirement already satisfied: botocore<1.30.0,>=1.29.24 in /opt/conda/lib/python3.7/site-packages (from boto3>=1.10.32->smdebug) (1.29.24)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /opt/conda/lib/python3.7/site-packages (from boto3>=1.10.32->smdebug) (0.6.0)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/conda/lib/python3.7/site-packages (from boto3>=1.10.32->smdebug) (1.0.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /opt/conda/lib/python3.7/site-packages (from packaging->smdebug) (2.4.6)\n",
+      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from packaging->smdebug) (1.14.0)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.7/site-packages (from botocore<1.30.0,>=1.29.24->boto3>=1.10.32->smdebug) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.7/site-packages (from botocore<1.30.0,>=1.29.24->boto3>=1.10.32->smdebug) (1.26.13)\n",
+      "Installing collected packages: pyinstrument-cext, pyinstrument, smdebug\n",
+      "Successfully installed pyinstrument-3.4.2 pyinstrument-cext-0.2.4 smdebug-1.0.12\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Install any packages that you might need\n",
     "# For instance, you will need the smdebug package\n",
-    "!pip install smdebug"
+    "# !pip install smdebug"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO: Import any packages that you might need\n",
     "# For instance you will need Boto3 and Sagemaker\n",
+    "import os\n",
+    "import boto3\n",
     "import sagemaker\n",
-    "import boto3"
+    "import json\n",
+    "import zipfile\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -49,15 +87,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2023-01-15 21:17:29--  https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip\n",
+      "Resolving s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)... 52.219.113.64\n",
+      "Connecting to s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)|52.219.113.64|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1132023110 (1.1G) [application/zip]\n",
+      "Saving to: ‘dogImages.zip’\n",
+      "\n",
+      "dogImages.zip       100%[===================>]   1.05G  27.9MB/s    in 38s     \n",
+      "\n",
+      "2023-01-15 21:18:08 (28.8 MB/s) - ‘dogImages.zip’ saved [1132023110/1132023110]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO: Fetch and upload the data to AWS S3\n",
     "\n",
     "# Command to download and unzip data\n",
-    "!wget https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip\n",
-    "!unzip dogImages.zip"
+    "\n",
+    "# !wget https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip\n",
+    "\n",
+    "# !unzip dogImages.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import os\n",
+    "import shutil\n",
+    "import zipfile\n",
+    "\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Set the name of the S3 bucket and the directory you want to upload\n",
+    "bucket_name = 'aws-dog-bucket'\n",
+    "\n",
+    "# Upload the zip file to S3\n",
+    "# s3.upload_file('dogImages.zip', bucket_name, 'dogImages.zip')\n",
+    "\n",
+    "# Cleanup\n",
+    "# os.remove('dogImages.zip')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Set the name of the S3 bucket, the key of the zip file, and the prefix for the unzipped files\n",
+    "zip_key = 'dogImages.zip'\n",
+    "unzip_prefix = 'data'\n",
+    "\n",
+    "# Download the zip file from S3\n",
+    "# s3.download_file(bucket_name, zip_key, 'dogImages.zip')\n",
+    "\n",
+    "# Unzip the file\n",
+    "# with zipfile.ZipFile('dogImages.zip', 'r') as zip_ref:\n",
+    "    # zip_ref.extractall('dogImages')\n",
+    "\n",
+    "# Upload the unzipped files to S3\n",
+    "# for root, dirs, files in os.walk('dogImages'):\n",
+    "    # for filename in files:\n",
+    "    #     local_path = os.path.join(root, filename)\n",
+    "    #     s3_path = unzip_prefix + os.path.relpath(local_path, 'dogImages')\n",
+    "    #     s3.upload_file(local_path, bucket_name, s3_path)\n",
+    "\n",
+    "# Cleanup\n",
+    "# os.remove('dogImages.zip')\n",
+    "# shutil.rmtree('dogImages')\n"
    ]
   },
   {
@@ -221,7 +340,7 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.g4dn.xlarge",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
